syntax = "proto3";
package protobuf;

message Media {
	int64  Version = 1;
	string GUID = 2;
	string Client = 3;
	string LoanType = 4;
	string OrderNumber = 5;
	string UserName = 6;
	float  Latitude = 7;
	float  Longitude = 8;
	string DateTaken = 9;
	string DeviceModel = 10;
	string DeviceOS = 11;
	string DeviceOSVersion = 12;
  string FileName = 13;
  string MimeType = 14;
	string Application = 15;
	string ApplicationID = 16;
	string ApplicationVersion = 17;
	bytes  Bytes = 18;
}
